--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,7 @@ S3method(print,summary.cv.biglasso)
 S3method(summary,cv.biglasso)
 export(biglasso)
 export(biglasso_fit)
-export(biglasso_simple_path)
+export(biglasso_path)
 export(cv.biglasso)
 export(setupX)
 import(bigmemory)
