fixing issues with test functions

--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,14 +1,9 @@
-.git
-.gitignore
-.Rbuildignore
-.Rhistory
-.DS_Store
-README.md
-test.*
-^.*\.Rproj$
-^\.Rproj\.user$
-^\.travis\.yml$
-^_pkgdown\.yml$
+^codecov\.yml$
 ^docs$
 ^pkgdown$
+^\.github$
 ^\.version\.json$
+^.*\.Rproj$
+^\.Rproj\.user$
+^codecov\.yml$
+^\.vscode$
