fixing codecov upload for gha

--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -46,4 +46,6 @@ jobs:
         uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          slug: pbreheny/biglasso
+          files: ./cobertura.xml
+          disable_search: true
+          fail_ci_if_error: true
