--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -42,11 +42,12 @@ jobs:
           covr::to_cobertura(cov)
         shell: Rscript {0}
 
-      - uses: codecov/codecov-action@v4
+      - uses: codecov/codecov-action@v5
         with:
           fail_ci_if_error: ${{ github.event_name != 'pull_request' || secrets.CODECOV_TOKEN }}
           files: ./cobertura.xml
           plugins: noop
+          slug: pbreheny/biglasso
           disable_search: true
           token: ${{ secrets.CODECOV_TOKEN }}
 
@@ -54,5 +55,5 @@ jobs:
         if: failure()
         uses: actions/upload-artifact@v4
         with:
-          name: coverage-test-failures
-          path: ${{ runner.temp }}/package
+          name: cobertura
+          path: ${{ runner.temp }}/cobertura.xml
