--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -51,9 +51,9 @@ jobs:
           disable_search: true
           token: ${{ secrets.CODECOV_TOKEN }}
 
-      - name: Upload test results
+      - name: Upload coverage results
         if: failure()
         uses: actions/upload-artifact@v4
         with:
-          name: cobertura
-          path: ${{ runner.temp }}/cobertura.xml
+          name: cobertura-report
+          path: ./cobertura.xml
