--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,21 +1,21 @@
 Package: biglasso
-Version: 1.6.0.4
-Date: 2025-03-04
+Version: 1.6.1
+Date: 2025-03-05
 Title: Extending Lasso Model Fitting to Big Data
 Authors@R: c(
-    person("Yaohui", "Zeng", role = c("aut")),
-    person("Chuyi", "Wang", role = c("aut")),
-    person("Tabitha", "Peter", role = c("aut")),
-    person("Patrick", "Breheny", role=c("aut","cre"),
-      email="patrick-breheny@uiowa.edu", comment=c(ORCID="0000-0002-0650-1119")))
+  person("Yaohui", "Zeng", role = c("aut")),
+  person("Chuyi", "Wang", role = c("aut")),
+  person("Tabitha", "Peter", role = c("aut")),
+  person("Patrick", "Breheny", role=c("aut","cre"),
+    email="patrick-breheny@uiowa.edu", comment=c(ORCID="0000-0002-0650-1119")))
 Maintainer: Patrick Breheny <patrick-breheny@uiowa.edu>
-Description: Extend lasso and elastic-net model fitting for ultra
-    high-dimensional, multi-gigabyte data sets that cannot be loaded into
-    memory. Designed to be more memory- and computation-efficient than existing
-    lasso-fitting packages like 'glmnet' and 'ncvreg', thus allowing
-    the user to analyze big data analysis even on an ordinary laptop.
+Description: Extend lasso and elastic-net model fitting for large data sets that
+  cannot be loaded into memory. Designed to be more memory- and
+  computation-efficient than existing lasso-fitting packages like 'glmnet' and
+  'ncvreg', thus allowing the user to analyze big data with limited RAM
+  <doi:10.32614/RJ-2021-001>.
 License: GPL-3
-URL: https://pbreheny.github.io/biglasso/index.html, https://github.com/pbreheny/biglasso, https://arxiv.org/abs/1701.05936
+URL: https://pbreheny.github.io/biglasso/, https://github.com/pbreheny/biglasso
 BugReports: https://github.com/pbreheny/biglasso/issues
 Depends: R (>= 3.2.0), bigmemory (>= 4.5.0), Matrix, ncvreg
 Imports: Rcpp (>= 0.12.1), methods
