--- a/pkgdown/_pkgdown.yml
+++ b/pkgdown/_pkgdown.yml
@@ -5,10 +5,23 @@ template:
   light-switch: true
 
 figures:
-  dev: ragg::agg_png
+  dev: png
   dpi: 96
   fig.ext: png
   fig.width: 5
   fig.height: 5
   fig.retina: 2
   bg: "#fff"
+
+home:
+  sidebar:
+    structure: [links, citation, authors, dev]
+
+footer:
+  structure:
+    left: developed_by
+    right: last_updated
+  components:
+    last_updated: !expr paste("Last updated:", format(Sys.time(), "%B %d, %Y"))
+
+
